syntax = "proto3";

option go_package = "sigmaos/graph/proto";

service BfsService {
  rpc BfsSingle(BfsIn) returns (BfsPath);
  rpc Put(Index) returns (None);
}

message Index{
  int64 val = 1;
}

message None{
}

message BfsIn {
  int64 n1 = 1;
  int64 n2 = 2;
}

message BfsPath {
  repeated int64 val = 1;
}
